--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -8,6 +8,9 @@ authors = ["jiwool0920 <jiwool0920@gmail.com>"]
 python = "^3.10"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
+alembic = "^1.14.1"
+python-dotenv = "^1.0.1"
+psycopg2 = "^2.9.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
