--- a/docker-compose.database.yml
+++ b/docker-compose.database.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:latest
-    container_name: postgres_${ENV:-dev} 
+    container_name: postgres_db 
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
