--- a/docker-compose.controller.yml
+++ b/docker-compose.controller.yml
@@ -1,14 +1,12 @@
-version: "3.7"
-
 services:
-  backend:
+  controller:
     platform: linux/x86_64
     build:
       context: ./services/backend
       args:
         - DOCKER_BUILDKIT=1
         - REGISTRY=python:3.10.0-buster # use public img for now
-    image: ideate-be
+    image: controller 
     command: >
       /bin/bash -c "uvicorn --host 0.0.0.0 api.server.main:app --port 8000"
     ports:
