--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.34.0"
 alembic = "^1.14.1"
 python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.10"
+asyncpg = "^0.30.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
