--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -12,6 +12,7 @@ alembic = "^1.14.1"
 python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.10"
 asyncpg = "^0.30.0"
+dotenv = "^0.9.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
