--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.10"
 asyncpg = "^0.30.0"
 dotenv = "^0.9.9"
+pydantic-settings = "^2.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
