--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,11 +2,19 @@
 
 services:
   controller:
+    platform: linux/x86_64
+    build:
+      context: ./services/backend
+      args:
+        - DOCKER_BUILDKIT=1
+        - REGISTRY=python:3.10.0-buster
+    image: controller
+    environment:
+      - PYTHONPATH=/app
     command:
       - /bin/bash
       - -c
       - |
         uvicorn --host 0.0.0.0 api.server.main:app --port 8000 --reload
     volumes:
-      # mount the local repo in the container
-      - ${LOCAL_REPO_PATH}:/app
+      - ./services/backend:/app
