--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "react": "^18.0.0",
@@ -15,7 +16,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
