--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -16,8 +16,9 @@ dotenv = "^0.9.9"
 pydantic-settings = "^2.8.1"
 websockets = "^12.0"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.0"
+black = "^22.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
